build: fix lot's of errors for EAS modification (squashed commit)
smp: Add new wake_up_all_idle_cpus() function

	Currently kick_all_cpus_sync() can break non-polling idle cpus
	thru IPI interrupts.

	But sometimes we need to break the polling idle cpus immediately
	to reselect the suitable c-state, also for non-idle cpus, we need
	to do nothing if we try to wake up them.

	Here adding one new function wake_up_all_idle_cpus() to let all cpus
	out of idle based on function wake_up_if_idle().

Revert "android: binder: Disable preemption while holding the global binder lock."

	This reverts commit 7defc387280cb1c65ba9b946d663463b26fc0c0a.

build: fix error for EAS

kernel: fix build 'error: too few arguments to function 'dequeue_rt_entity''

kernel: cpuset Remove unused variable.

Revert "smp: make wake up idle cpus more generic"

	This reverts commit 5516b28c7c55502b29ad2d8af98f7f7e61925356.

Revert "Revert "cpuidle: Wakeup only cpus for which qos has changed.""

	This reverts commit 841399e5f0cf2f1f58d72d6f087015ddbce25df5.

defconfig/fs: exec: remove undefined reference to su_*

--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -45,11 +45,11 @@ CONFIG_IOSCHED_MAPLE=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_STATE_NOTIFIER=y
-CONFIG_SCHED_WALT
+CONFIG_SCHED_WALT=y
 CONFIG_SCHED_WALT_DEFAULT=y
 CONFIG_SCHED_TUNE=y
 CONFIG_CGROUP_SCHEDTUNE=y
-CONFIG_CPU_FREQ_GOV_SCHED=y
+# CONFIG_CPU_FREQ_GOV_SCHED is not set
 # CONFIG_BUS_AUTO_SUSPEND is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_TASK_DELAY_ACCT is not set
