--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -971,4 +971,7 @@ config MMI_STORAGE_INFO
 	help
 	Provide mechanism to export EMMC/UFS type, size and vendor info.
 
+config STATE_NOTIFIER
+        bool "State Notifier"
+
 endif # ARCH_MSM
