Defconfig: Enable CONFIG_CPU_FREQ_GOV_SCHEDUTIL
Signed-off-by: RenderBroken <zkennedy87@gmail.com>

--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -50,7 +50,7 @@ CONFIG_SCHED_TUNE=y
 CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_CPU_FREQ_GOV_SCHED=y
 # CONFIG_BUS_AUTO_SUSPEND is not set
-
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 
 #
 # General setup
