--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -4471,6 +4471,7 @@ CONFIG_PSTORE_CONSOLE=y
 # CONFIG_PSTORE_PMSG is not set
 CONFIG_PSTORE_RAM=y
 CONFIG_PSTORE_RAM_ANNOTATION_APPEND=y
+CONFIG_MSM_PRESERVE_MEM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 CONFIG_F2FS_FS=y
