--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -36,6 +36,11 @@ CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 
 #
+# Kernel features
+#
+CONFIG_BOEFFLA_WL_BLOCKER=y
+
+#
 # General setup
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
