--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -40,6 +40,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_FRANDOM=y
+CONFIG_IOSCHED_MAPLE=y
+# CONFIG_DEFAULT_MAPLE is not set
 
 #
 # General setup
