--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -42,6 +42,8 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_FRANDOM=y
 CONFIG_IOSCHED_MAPLE=y
 # CONFIG_DEFAULT_MAPLE is not set
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_SOUND_CONTROL=y
 
 #
 # General setup
