defconfig: Update for EAS

--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -45,6 +45,10 @@ CONFIG_IOSCHED_MAPLE=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_STATE_NOTIFIER=y
+CONFIG_SCHED_WALT
+CONFIG_SCHED_TUNE=y
+CONFIG_CGROUP_SCHEDTUNE=y
+CONFIG_CPU_FREQ_GOV_SCHED=y
 
 #
 # General setup
@@ -149,8 +153,6 @@ CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
-CONFIG_SCHED_HMP=y
-# CONFIG_SCHED_HMP_CSTATE_AWARE is not set
 # CONFIG_SCHED_CORE_CTL is not set
 # CONFIG_SCHED_QHMP is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
@@ -527,7 +529,6 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 #
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
-CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
@@ -543,7 +544,6 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPUFREQ_DT is not set
-# CONFIG_CPU_BOOST is not set
 
 #
 # ARM CPU frequency scaling drivers
@@ -2286,7 +2286,6 @@ CONFIG_MSM_DLOAD_MODE=y
 # CONFIG_POWER_RESET_SYSCON is not set
 # CONFIG_POWER_AVS is not set
 CONFIG_MSM_PM=y
-CONFIG_APSS_CORE_EA=y
 CONFIG_MSM_APM=y
 CONFIG_MSM_IDLE_STATS=y
 CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
@@ -4072,8 +4071,6 @@ CONFIG_MSM_SECURE_BUFFER=y
 # CONFIG_ICNSS is not set
 # CONFIG_MSM_CORE_CTL is not set
 CONFIG_MSM_BAM_DMUX=y
-CONFIG_MSM_PERFORMANCE=y
-CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 # CONFIG_MSM_POWER is not set
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 # CONFIG_MSM_QBT1000 is not set
