defconfig: disable CONFIG_BUS_AUTO_SUSPEND
long runtime PM callbacks with preemption disabled causes jank.

--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -49,6 +49,8 @@ CONFIG_SCHED_WALT
 CONFIG_SCHED_TUNE=y
 CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_CPU_FREQ_GOV_SCHED=y
+# CONFIG_BUS_AUTO_SUSPEND is not set
+
 
 #
 # General setup
