--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -46,11 +46,13 @@ CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_SCHED_WALT
+CONFIG_SCHED_WALT_DEFAULT=y
 CONFIG_SCHED_TUNE=y
 CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_CPU_FREQ_GOV_SCHED=y
 # CONFIG_BUS_AUTO_SUSPEND is not set
-# CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+# CONFIG_TASK_DELAY_ACCT is not set
 
 #
 # General setup
@@ -499,7 +501,7 @@ CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_CPU_PM=y
-CONFIG_SUSPEND_TIME=y
+# CONFIG_SUSPEND_TIME is not set
 # CONFIG_SUSPEND_TIME_TIMEKEEPING is not set
 # CONFIG_SUSPEND_WATCHDOG is not set
 # CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
@@ -4617,7 +4619,7 @@ CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_PANIC_ON_RECURSIVE_FAULT=y
-# CONFIG_SCHED_DEBUG is not set
+CONFIG_SCHED_DEBUG=y
 # CONFIG_PANIC_ON_SCHED_BUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
 # CONFIG_SCHED_STACK_END_CHECK is not set
