--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -44,6 +44,7 @@ CONFIG_IOSCHED_MAPLE=y
 # CONFIG_DEFAULT_MAPLE is not set
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_SOUND_CONTROL=y
+CONFIG_STATE_NOTIFIER=y
 
 #
 # General setup
