--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -52,6 +52,7 @@ CONFIG_CGROUP_SCHEDTUNE=y
 # CONFIG_BUS_AUTO_SUSPEND is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_TASK_DELAY_ACCT is not set
+CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 
 #
 # General setup
